# bit_vector_experiments

./: .gitmodules  CMakeLists.txt  README.md  run_benchmarks.sh
benchmarks/: benchmark_result.hpp  pasta_popcount.hpp  pasta_popcount_flat.hpp  pasta_popcount_flat_compressed.hpp  pasta_popcount_wide.hpp  poppy_rank_select.hpp  poppy_rank_select_improved.hpp  rank9_select.hpp  rank_select_benchmark.cpp  sdsl_default.hpp  sdsl_default_rank.hpp  sdsl_default_select.hpp  sdsl_rank_v5.hpp  sdsl_rrr_rank.hpp  sdsl_rrr_select.hpp  sdsl_sd_rank.hpp  sdsl_sd_select.hpp  sdsl_with_v5.hpp  simple_select.hpp  simple_select_half.hpp
template/: .gitignore  plots.tex
utils/: bit_vector_to_std_vector.cpp
